cleanup MessageTest